--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=clubadata-api
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_LOG_LEVEL=error
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=clubdata
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=api_pgsql
+DB_PORT=5432
+DB_DATABASE=clubdata-api
+DB_USERNAME=clubdata-api
+DB_PASSWORD=clubdata-api
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
